--- a/dom manipulation-removing element/index.html
+++ b/dom manipulation-removing element/index.html
@@ -7,6 +7,7 @@
     <title>dom manipulation-removing element</title>
 </head>
 <body>
+    <h2>Remove Element Test</h2>
     <div id="main">
         <h1 id="title">Hello World!</h1>
     <p id="hint">This is a simple paragraph.</p> 
